--- a/cursos/espanol/mlops/4.2_ci_cd.ipynb
+++ b/cursos/espanol/mlops/4.2_ci_cd.ipynb
@@ -13,12 +13,7 @@
     "\n",
     "Para realizar integracion continua podemos escribir nuestro propio codigo para automatizar pero ya existe software y servicios que lo hacen por nosotros como:\n",
     "- [GitHub Actions](https://docs.github.com/es/actions/writing-workflows/quickstart)\n",
-    "- [Jenkins](https://www.jenkins.io/)\n",
-    "\n",
-    "Mas informacion en GitHub:\n",
-    "- [Integracion Continua](https://docs.github.com/es/actions/about-github-actions/about-continuous-integration)\n",
-    "- [GitHub Actions](https://docs.github.com/es/actions/writing-workflows/quickstart)\n",
-    "- [Workflows](https://docs.github.com/es/actions/writing-workflows)"
+    "- [Jenkins](https://www.jenkins.io/)"
    ]
   },
   {
@@ -28,7 +23,7 @@
    "source": [
     "## Integracion Continua con GitHub Actions\n",
     "\n",
-    "GitHub nos permite hacer integracion continua a traves de un servicio llamado Actions en donde en un fichero de configuracion definimos que funciones o programas se deben ejecutar cada vez que sucede un evento como por ejemplo que un desarrollador haga push en el repositorio.\n",
+    "GitHub nos permite hacer integracion continua a traves de un servicio llamado [GitHub Actions](https://docs.github.com/es/actions/writing-workflows/quickstart) en donde en un fichero de configuracion definimos que funciones o programas se deben ejecutar cada vez que sucede un evento como por ejemplo que un desarrollador haga push en el repositorio.\n",
     "\n",
     "Veamos un ejemplo:"
    ]
@@ -72,9 +67,9 @@
     "Los ficheros de configuracion usan formatos estandar para definir la configuracion y como queremos que funcione un software especifico.\n",
     "\n",
     "Los tres formatos de ficheros de configuracion mas utilizados son:\n",
-    "- TOML\n",
-    "- YAML\n",
-    "- JSON\n",
+    "- [TOML](https://toml.io/en/)\n",
+    "- [YAML](https://yaml.org/)\n",
+    "- [JSON](https://www.json.org/json-es.html)\n",
     "\n",
     "Veamos una comparacion rapida de estos:"
    ]
@@ -161,8 +156,9 @@
    "source": [
     "## Referencias:\n",
     "\n",
-    "- [Documentacion oficial de git](https://git-scm.com/docs)\n",
-    "- [Tutorial](https://colab.research.google.com/drive/11EPXUjESxiT1RV6p1pkeKYS8PJFkRNpk)"
+    "- [Integracion Continua](https://docs.github.com/es/actions/about-github-actions/about-continuous-integration)\n",
+    "- [GitHub Actions](https://docs.github.com/es/actions/writing-workflows/quickstart)\n",
+    "- [Workflows](https://docs.github.com/es/actions/writing-workflows)"
    ]
   }
  ],
