--- a/cursos/espanol/mlops/5_etl_pipelines_frameworks.ipynb
+++ b/cursos/espanol/mlops/5_etl_pipelines_frameworks.ipynb
@@ -100,12 +100,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a02fc9c6-42dc-4e18-81c3-f623b1e12928",
+   "cell_type": "markdown",
+   "id": "41a61378-723d-4bd8-a10c-abc02cacc7f3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/mlops/mlops.html)"
+   ]
   }
  ],
  "metadata": {
