--- a/cursos/espanol/mlops/1_package_managers.ipynb
+++ b/cursos/espanol/mlops/1_package_managers.ipynb
@@ -19,14 +19,6 @@
     "\n",
     "- Si solo vas a programar utilizando Google Colab instala las librerias que necesites todas juntas en una de las primeras celdas. Esto te servira para saber que configuracion necesitas a la hora de llevarlo a produccion.\n",
     "\n",
-    "- Si quieres utilizar solo las herramientas oficiales de Python utiliza `venv` y `pip` como recomienda esta [guia oficial](https://packaging.python.org/en/latest/guides/installing-using-pip-and-virtual-environments/):\n",
-    "```bash\n",
-    "python3 -m venv .venv\n",
-    "source .venv/bin/activate\n",
-    "python3 -m pip install --upgrade pip\n",
-    "python3 -m pip install pandas\n",
-    "```\n",
-    "\n",
     "- Si vas a programar localmente en jupyter lab y necesitas instalar librerias desde Anaconda y desde PyPi puedes utilizar pixi y sera tan simple como hacer:\n",
     "```bash\n",
     "pixi init mi-proyecto\n",
@@ -37,6 +29,14 @@
     "\n",
     "- Si solo necesitas librerias de PyPi puedes utilizar Poetry o Rye y todo sera mas simple y rapido.\n",
     "\n",
+    "- Si quieres utilizar solo las herramientas oficiales de Python utiliza `venv` y `pip` como recomienda esta [guia oficial](https://packaging.python.org/en/latest/guides/installing-using-pip-and-virtual-environments/):\n",
+    "```bash\n",
+    "python3 -m venv .venv\n",
+    "source .venv/bin/activate\n",
+    "python3 -m pip install --upgrade pip\n",
+    "python3 -m pip install pandas\n",
+    "```\n",
+    "\n",
     "*Nota: no recomiendo usar conda porque he visto muchos problemas en los ordenadores de mis alumnos, sobre todo en combinacion con jupyter lab.*"
    ]
   },
@@ -45,30 +45,30 @@
    "id": "4506b9fd-a892-4799-b07e-ea5a123efb54",
    "metadata": {},
    "source": [
-    "## Directorios Virtuales, Instaladores y Manejadores de Librerias\n",
+    "## Entornos Virtuales, Instaladores y Manejadores de Librerias\n",
     "\n",
     "\n",
-    "### Directorios Virtuales (Virtual Environments)\n",
+    "### Entornos Virtuales (Virtual Environments)\n",
     "\n",
-    "Permiten crear directorios virtuales donde podemos instalar las librerias necesarias para un proyecto y que no generen conflicto con otras librerias de otros proyectos siempre que estos se encuentren en otros directorios virtuales.\n",
+    "Permiten crear entornos virtuales donde podemos instalar las librerias necesarias para un proyecto y que no generen conflicto con otras librerias de otros proyectos siempre que estos se encuentren en otros entornos virtuales.\n",
     "\n",
     "#### [venv](https://docs.python.org/3/library/venv.html)\n",
     "\n",
-    "Esta herramienta ya viene incluida con python. Permite crear y activar y desactivar directorios virtuales. Una vez activados todo lo que instalemos alli quedara aislado del resto de las instalaciones que realicemos en el ordenador.\n",
+    "Esta herramienta ya viene incluida con python. Permite crear y activar y desactivar entornos virtuales. Una vez activados todo lo que instalemos alli quedara aislado del resto de las instalaciones que realicemos en el ordenador.\n",
     "\n",
     "Comandos:\n",
-    "- `python -m venv <venv_path>`: crea el directorio virtual. ej:`python -m venv /mi_proyecto`\n",
-    "- `source <venv_path>/bin/activate`: activa el directorio virtual. ej:`source /mi_proyecto/bin/activate`\n",
-    "- `deactivate`: desactiva el directorio virtual\n",
+    "- `python -m venv <venv_path>`: crea el entorno virtual. ej:`python -m venv /mi_proyecto/.venv/`\n",
+    "- `source <venv_path>/bin/activate`: activa el entorno virtual. ej:`source /mi_proyecto/.venv/bin/activate`\n",
+    "- `deactivate`: desactiva el entorno virtual\n",
     "\n",
     "#### [virtualenv](https://virtualenv.pypa.io/en/latest/)\n",
     "\n",
     "Realiza lo mismo que venv y ademas tiene mas funcionalidades, de hecho venv nace a partir de virtualenv. Puedes ver las diferencias entre ambos [aqui](https://virtualenv.pypa.io/en/latest/)\n",
     "\n",
     "Comandos:\n",
-    "- `virtualenv <venv_path>`: crea el directorio virtual. ej:`virtualenv /mi_proyecto`\n",
-    "- `source <venv_path>/bin/activate`: activa el directorio virtual. ej:`source /mi_proyecto/bin/activate`\n",
-    "- `deactivate`: desactiva el directorio virtual\n",
+    "- `virtualenv <venv_path>`: crea el entorno virtual. ej:`virtualenv /mi_proyecto/.venv/`\n",
+    "- `source <venv_path>/bin/activate`: activa el entorno virtual. ej:`source /mi_proyecto/.venv/bin/activate`\n",
+    "- `deactivate`: desactiva el entorno virtual\n",
     "\n",
     "### Versiones de Python\n",
     "\n",
@@ -80,7 +80,7 @@
     "- `pyenv install -l`: muestra una lista de las versiones de python instaladas\n",
     "- [`pyenv install 3.10.4`]((https://github.com/pyenv/pyenv/blob/master/COMMANDS.md#pyenv-install)): instala una version especifica (3.10.4 en este caso)\n",
     "- [`pyenv shell <version>`](https://github.com/pyenv/pyenv/blob/master/COMMANDS.md#pyenv-shell):selecciona la version de python para la sesion de shell actual\n",
-    "- [`pyenv local <version>`](https://github.com/pyenv/pyenv/blob/master/COMMANDS.md#pyenv-local): selecciona la version de python para el directorio actual\n",
+    "- [`pyenv local <version>`](https://github.com/pyenv/pyenv/blob/master/COMMANDS.md#pyenv-local): selecciona la version de python para el entorno actual\n",
     "- [`pyenv global <version>`](https://github.com/pyenv/pyenv/blob/master/COMMANDS.md#pyenv-shell): selecciona la version de python globalmente para el usuario actual\n",
     "\n",
     "### Administradores de Librerias\n",
@@ -100,19 +100,19 @@
     "\n",
     "### Todo en uno\n",
     "\n",
-    "Son programas que permiten realizar todas las funciones mencionadas anteriormente y mas. El mas conocido es Conda que permite crear directorios virtuales y ademas posee su propio instalador y ecosistema de librerias. Poetry y Rye estan ganando popularidad y Pixi es similar a Poetry pero incluye tambien el ecosistema de Conda. Como profesor recomiendo utilizar Poetry o Rye ya que son mas modernos y he visto a Conda generar muchos problemas, en caso de querer utilizar el ecosistema Conda me inclinaria por utilizar Pixi.\n",
+    "Son programas que permiten realizar todas las funciones mencionadas anteriormente y mas. El mas conocido es Conda que permite crear entornos virtuales y ademas posee su propio instalador y ecosistema de librerias. Poetry y Rye estan ganando popularidad y Pixi es similar a Poetry pero incluye tambien el ecosistema de Conda. Como profesor recomiendo utilizar Poetry o Rye ya que son mas modernos y he visto a Conda generar muchos problemas, en caso de querer utilizar el ecosistema Conda me inclinaria por utilizar Pixi.\n",
     "\n",
     "\n",
     "#### [Poetry](https://python-poetry.org/)\n",
     "\n",
     "[Comandos](https://python-poetry.org/docs/basic-usage/):\n",
     "\n",
-    "- [`poetry new poetry-demo`](): crea un nuevo proyecto y su directorio virtual\n",
+    "- [`poetry new poetry-demo`](): crea un nuevo proyecto y su entorno virtual\n",
     "- [`poetry add numpy`](): agrega una libreria al proyecto\n",
     "- [`poetry install`](): instala las librerias\n",
-    "- [`poetry run python your_script.py`](): ejecuta el script dentro del directorio virtual\n",
-    "- [`poetry shell`](): activa el directorio virtual\n",
-    "- [`deactivate`](): desactiva el directorio virtual\n",
+    "- [`poetry run python your_script.py`](): ejecuta el script dentro del entorno virtual\n",
+    "- [`poetry shell`](): activa el entorno virtual\n",
+    "- [`deactivate`](): desactiva el entorno virtual\n",
     "\n",
     "\n",
     "#### [Rye](https://rye.astral.sh/)\n",
@@ -122,13 +122,13 @@
     "- [`rye init my-project`](): crea un nuevo proyecto, luego ingresamos con `cd my-project`\n",
     "- [`rye init --script my-project`](): crea un nuevo proyecto ejecutable, luego ingresamos con `cd my-project`\n",
     "- [`rye pin 3.10`](): establece la version de python\n",
-    "- [`rye sync`](): crea el directorio virtual y escribe el lock file\n",
+    "- [`rye sync`](): crea el entorno virtual y escribe el lock file\n",
     "- [`rye add \"flask>=2.0\"`](): agrega una libreria y `rye sync` la instala\n",
     "- [`rye remove flask`](): elimina una libreria\n",
-    "- [`rye run my-proyect`](): ejecuta el proyecto dentro del directorio virtual\n",
-    "- [`rye run jupyter lab`](): ejecuta ejecutables dentro del directorio virtual\n",
-    "- [`source ./bin/activate`](): activa el directorio virtual\n",
-    "- [`deactivate`](): desactiva el directorio virtual\n",
+    "- [`rye run my-proyect`](): ejecuta el proyecto dentro del entorno virtual\n",
+    "- [`rye run jupyter lab`](): ejecuta ejecutables dentro del entorno virtual\n",
+    "- [`source ./bin/activate`](): activa el entorno virtual\n",
+    "- [`deactivate`](): desactiva el entorno virtual\n",
     "\n",
     "#### [Pixi](https://prefix.dev/)\n",
     "\n",
@@ -137,15 +137,15 @@
     "- [`pixi init pixi-hello-world`](): crea un proyecto nuevo, luego ingresamos con `cd pixi-hello-world`\n",
     "- [`pixi add numpy`](): instala librerias desde conda\n",
     "- [`pixi add --pypi numpy`](): instala librerias desde pypi\n",
-    "- [`pixi run jupyter lab`](): ejecuta codigo dentro del directorio virtual del proyecto\n",
+    "- [`pixi run jupyter lab`](): ejecuta codigo dentro del entorno virtual del proyecto\n",
     "\n",
     "#### [Conda](https://docs.conda.io/en/latest/)\n",
     "\n",
     "[Comandos](https://docs.conda.io/projects/conda/en/stable/commands/index.html#conda-vs-pip-vs-virtualenv-commands):\n",
     "\n",
-    "- [`conda create --name $ENVIRONMENT_NAME python`](https://docs.conda.io/projects/conda/en/stable/commands/env/create.html): crea un directorio virtual\n",
-    "- [`conda activate $ENVIRONMENT_NAME`](): activa el directorio virtual\n",
-    "- [`conda deactivate`](): desactiva el directorio virtual\n",
+    "- [`conda create --name $ENVIRONMENT_NAME python`](https://docs.conda.io/projects/conda/en/stable/commands/env/create.html): crea un entorno virtual\n",
+    "- [`conda activate $ENVIRONMENT_NAME`](): activa el entorno virtual\n",
+    "- [`conda deactivate`](): desactiva el entorno virtual\n",
     "- [`conda install $PACKAGE_NAME`](https://docs.conda.io/projects/conda/en/stable/commands/install.html): instala una libreria\n",
     "- [`conda remove --name $ENVIRONMENT_NAME $PACKAGE_NAME`](): elimina una libreria\n"
    ]
@@ -162,6 +162,36 @@
     "### Que es una maquina virtual?\n",
     "\n",
     "Una maquina virtual es un ordenar creado temporalmente mediante software, entonces cada vez que iniciamos una notebook de colab (pestaña de colab en nuestro browser) se crea automaticamente un ordenador temporal completamente limpio con una version de python ya instalada y tambien varias librerias. Como cada pestaña de colab es un ordenar temporal distinto entonces no se van a generar conflictos entre ellos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42c971a0",
+   "metadata": {},
+   "source": [
+    "### Explicacion de como funciona un entorno virtual\n",
+    "\n",
+    "Un venv es simplemente un directorio que incluye enlaces simbólicos a un intérprete de Python instalado, un directorio lib donde se ubican los paquetes instalados y algunos scripts para cambiar las variables de entorno para activarlo o desactivarlo.\n",
+    "\n",
+    "Cuando \"activas\" un venv, el script cambia (entre otras cosas) tu variable PATH, por lo que tu intérprete de comandos encontrará las versiones locales de todos los ejecutables de Python (intérprete, pip, etc.).\n",
+    "\n",
+    "Si instalas paquetes mientras un venv está activo, los instalarás en .venv/lib/python-VERSION/site-packages en lugar de donde normalmente los instalaría tu sistema.\n",
+    "\n",
+    "Cuando importas algo en un intérprete que se ejecuta en un venv activo, cargará el paquete o módulo desde allí.\n",
+    "\n",
+    "¿Debería tener espacios de trabajo separados para cada proyecto?\n",
+    "\n",
+    "Deberías tener venvs separados para cada proyecto de Python. A menos que manejes bibliotecas muy grandes, como torch, los venvs tienden a ser bastante pequeños.\n",
+    "\n",
+    "Ten en cuenta que la ubicación real del directorio .venv no importa. Usualmente está en el directorio base del proyecto, pero no tiene por qué ser así.\n",
+    "\n",
+    "Sin embargo, no confundas venvs con espacios de trabajo. Un \"espacio de trabajo\" generalmente denota el directorio donde tienes todas las carpetas raíz de tus proyectos.\n",
+    "\n",
+    "Para eliminar un .venv, solamente hace falta eliminar la carpeta .venv.\n",
+    "\n",
+    "¿Qué pasa si elimino la carpeta .venv sin desactivarla?\n",
+    "\n",
+    "Aún puedes desactivar el venv, porque el comando deactivate se carga como una función en tu entorno de shell. En cualquier caso, puedes simplemente cerrar el intérprete de comandos, lo cual tiene el mismo efecto que desactivar el venv."
    ]
   },
   {
