--- a/cursos/espanol/mlops/4.1_git_remoto.ipynb
+++ b/cursos/espanol/mlops/4.1_git_remoto.ipynb
@@ -64,7 +64,7 @@
    "id": "79d51545-983a-42bb-a271-41150a6591fc",
    "metadata": {},
    "source": [
-    "Ademas para que los siguientes funcionen deberemos configuar algun metodo para autenticar que nosotros estamos habilitados para modificar ese repositorio remoto, esto puede ser mediante la utilizacion de un [TOKEN](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens) o mediante el uso de [claves criptograficas SSH](https://docs.github.com/en/authentication/connecting-to-github-with-ssh)\n",
+    "Ademas para que los siguientes comandos funcionen deberemos configuar algun metodo para autenticar que nosotros estamos habilitados para modificar ese repositorio remoto, esto puede ser mediante la utilizacion de un [TOKEN](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens) o mediante el uso de [SSH](https://docs.github.com/en/authentication/connecting-to-github-with-ssh)\n",
     "\n",
     "En github puedes crear tus tokens [aqui](https://github.com/settings/tokens) y tus claves SSH [aqui](https://github.com/settings/keys)"
    ]
