New videos added for programacion

--- a/cursos/espanol/mlops/1_package_managers.ipynb
+++ b/cursos/espanol/mlops/1_package_managers.ipynb
@@ -31,6 +31,7 @@
     "\n",
     "- Si quieres utilizar solo las herramientas oficiales de Python utiliza `venv` y `pip` como recomienda esta [guia oficial](https://packaging.python.org/en/latest/guides/installing-using-pip-and-virtual-environments/):\n",
     "```bash\n",
+    "cd mi-proyecto\n",
     "python3 -m venv .venv\n",
     "source .venv/bin/activate\n",
     "python3 -m pip install --upgrade pip\n",
@@ -50,7 +51,7 @@
     "\n",
     "### Entornos Virtuales (Virtual Environments)\n",
     "\n",
-    "Permiten crear entornos virtuales donde podemos instalar las librerias necesarias para un proyecto y que no generen conflicto con otras librerias de otros proyectos siempre que estos se encuentren en otros entornos virtuales.\n",
+    "Las siguientes herramientas permiten crear entornos virtuales donde podemos instalar las librerias necesarias para un proyecto y que no generen conflicto con otras librerias de otros proyectos siempre que estos se encuentren en otros entornos virtuales.\n",
     "\n",
     "#### [venv](https://docs.python.org/3/library/venv.html)\n",
     "\n",
@@ -152,24 +153,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20ad64eb-083c-4f97-80a6-8edb74df341a",
-   "metadata": {},
-   "source": [
-    "## Debo usar esto en Google Colab?\n",
-    "\n",
-    "Debido a que Google Colab funciona en una maquina virtual, solo utilizaremos el instalador pip. El resto de las herramientas vistas aqui no son utiles en google colab pero si muy utiles si trabajamos en nuestro ordenar personal.\n",
-    "\n",
-    "### Que es una maquina virtual?\n",
-    "\n",
-    "Una maquina virtual es un ordenar creado temporalmente mediante software, entonces cada vez que iniciamos una notebook de colab (pestaña de colab en nuestro browser) se crea automaticamente un ordenador temporal completamente limpio con una version de python ya instalada y tambien varias librerias. Como cada pestaña de colab es un ordenar temporal distinto entonces no se van a generar conflictos entre ellos."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "42c971a0",
    "metadata": {},
    "source": [
-    "### Explicacion de como funciona un entorno virtual\n",
+    "## Explicacion de como funciona un entorno virtual\n",
     "\n",
     "Un venv es simplemente un directorio que incluye enlaces simbólicos a un intérprete de Python instalado, un directorio lib donde se ubican los paquetes instalados y algunos scripts para cambiar las variables de entorno para activarlo o desactivarlo.\n",
     "\n",
@@ -178,8 +165,6 @@
     "Si instalas paquetes mientras un venv está activo, los instalarás en .venv/lib/python-VERSION/site-packages en lugar de donde normalmente los instalaría tu sistema.\n",
     "\n",
     "Cuando importas algo en un intérprete que se ejecuta en un venv activo, cargará el paquete o módulo desde allí.\n",
-    "\n",
-    "¿Debería tener espacios de trabajo separados para cada proyecto?\n",
     "\n",
     "Deberías tener venvs separados para cada proyecto de Python. A menos que manejes bibliotecas muy grandes, como torch, los venvs tienden a ser bastante pequeños.\n",
     "\n",
@@ -192,6 +177,20 @@
     "¿Qué pasa si elimino la carpeta .venv sin desactivarla?\n",
     "\n",
     "Aún puedes desactivar el venv, porque el comando deactivate se carga como una función en tu entorno de shell. En cualquier caso, puedes simplemente cerrar el intérprete de comandos, lo cual tiene el mismo efecto que desactivar el venv."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20ad64eb-083c-4f97-80a6-8edb74df341a",
+   "metadata": {},
+   "source": [
+    "## Debo usar esto en Google Colab?\n",
+    "\n",
+    "Debido a que Google Colab funciona en una maquina virtual, solo utilizaremos el instalador pip. El resto de las herramientas vistas aqui no son utiles en google colab pero si muy utiles si trabajamos en nuestro ordenar personal.\n",
+    "\n",
+    "### Que es una maquina virtual?\n",
+    "\n",
+    "Una maquina virtual es un ordenar creado temporalmente mediante software, entonces cada vez que iniciamos una notebook de colab (pestaña de colab en nuestro browser) se crea automaticamente un ordenador temporal completamente limpio con una version de python ya instalada y tambien varias librerias. Como cada pestaña de colab es un ordenar temporal distinto entonces no se van a generar conflictos entre ellos."
    ]
   },
   {
