Changed Rye for uv

--- a/cursos/espanol/mlops/1_package_managers.ipynb
+++ b/cursos/espanol/mlops/1_package_managers.ipynb
@@ -27,7 +27,7 @@
     "pixi run jupyter lab\n",
     "```\n",
     "\n",
-    "- Si solo necesitas librerias de PyPi puedes utilizar Poetry o Rye y todo sera mas simple y rapido.\n",
+    "- Si solo necesitas librerias de PyPi puedes utilizar [uv](https://docs.astral.sh/uv/) y todo sera mas simple y rapido.\n",
     "\n",
     "- Si quieres utilizar solo las herramientas oficiales de Python utiliza `venv` y `pip` como recomienda esta [guia oficial](https://packaging.python.org/en/latest/guides/installing-using-pip-and-virtual-environments/):\n",
     "```bash\n",
@@ -101,7 +101,7 @@
     "\n",
     "### Todo en uno\n",
     "\n",
-    "Son programas que permiten realizar todas las funciones mencionadas anteriormente y mas. El mas conocido es Conda que permite crear entornos virtuales y ademas posee su propio instalador y ecosistema de librerias. Poetry y Rye estan ganando popularidad y Pixi es similar a Poetry pero incluye tambien el ecosistema de Conda. Como profesor recomiendo utilizar Poetry o Rye ya que son mas modernos y he visto a Conda generar muchos problemas, en caso de querer utilizar el ecosistema Conda me inclinaria por utilizar Pixi.\n",
+    "Son programas que permiten realizar todas las funciones mencionadas anteriormente y mas. El mas conocido es Conda que permite crear entornos virtuales y ademas posee su propio instalador y ecosistema de librerias. Poetry y uv estan ganando popularidad y Pixi es similar a Poetry pero incluye tambien el ecosistema de Conda. Como profesor recomiendo utilizar Poetry o uv ya que son mas modernos y he visto a Conda generar muchos problemas, en caso de querer utilizar el ecosistema Conda me inclinaria por utilizar Pixi.\n",
     "\n",
     "\n",
     "#### [Poetry](https://python-poetry.org/)\n",
@@ -116,18 +116,18 @@
     "- [`deactivate`](): desactiva el entorno virtual\n",
     "\n",
     "\n",
-    "#### [Rye](https://rye.astral.sh/)\n",
+    "#### [uv](https://docs.astral.sh/uv/)\n",
     "\n",
-    "[Comandos](https://rye.astral.sh/guide/basics/):\n",
+    "[Comandos](https://docs.astral.sh/uv/getting-started/features/):\n",
     "\n",
-    "- [`rye init my-project`](): crea un nuevo proyecto, luego ingresamos con `cd my-project`\n",
-    "- [`rye init --script my-project`](): crea un nuevo proyecto ejecutable, luego ingresamos con `cd my-project`\n",
-    "- [`rye pin 3.10`](): establece la version de python\n",
-    "- [`rye sync`](): crea el entorno virtual y escribe el lock file\n",
-    "- [`rye add \"flask>=2.0\"`](): agrega una libreria y `rye sync` la instala\n",
-    "- [`rye remove flask`](): elimina una libreria\n",
-    "- [`rye run my-proyect`](): ejecuta el proyecto dentro del entorno virtual\n",
-    "- [`rye run jupyter lab`](): ejecuta ejecutables dentro del entorno virtual\n",
+    "- [`uv init my-project`](): crea un nuevo proyecto, luego ingresamos con `cd my-project`\n",
+    "- [`uv init --script my-project`](): crea un nuevo proyecto ejecutable, luego ingresamos con `cd my-project`\n",
+    "- [`uv pin 3.10`](): establece la version de python\n",
+    "- [`uv sync`](): crea el entorno virtual y escribe el lock file\n",
+    "- [`uv add \"flask>=2.0\"`](): agrega una libreria y `uv sync` la instala\n",
+    "- [`uv remove flask`](): elimina una libreria\n",
+    "- [`uv run my-proyect`](): ejecuta el proyecto dentro del entorno virtual\n",
+    "- [`uv run jupyter lab`](): ejecuta ejecutables dentro del entorno virtual\n",
     "- [`source ./bin/activate`](): activa el entorno virtual\n",
     "- [`deactivate`](): desactiva el entorno virtual\n",
     "\n",
