dokku and dockploy references added

--- a/cursos/espanol/mlops/3_docker.ipynb
+++ b/cursos/espanol/mlops/3_docker.ipynb
@@ -120,9 +120,20 @@
    "id": "533448c3-c578-4e45-95ca-2d23a6433a02",
    "metadata": {},
    "source": [
-    "## Ejercicio\n",
+    "## Ejercicio 1\n",
     "\n",
     "Ejecutar una app de [Gradio utilizando Docker](https://www.gradio.app/guides/deploying-gradio-with-docker)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "887ccdf2",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 2\n",
+    "\n",
+    "Repetir el ejercicio 1 pero en un servidor utiliznado [dokku](https://dokku.com/\n",
+    "o [dockploy](https://github.com/Dokploy/dokploy)"
    ]
   },
   {
@@ -144,6 +155,11 @@
     "- https://www.docker.com/play-with-docker/\n",
     "- https://training.play-with-docker.com/\n",
     "- https://labs.leaningtech.com/blog/mini-webvm-your-linux-box-from-dockerfile-via-wasm\n",
+    "\n",
+    "Dokku y dokploy: herramientas para crear facilmente un server que ejecute docker\n",
+    "- https://dokku.com/\n",
+    "- https://github.com/Dokploy/dokploy\n",
+    "- https://news.ycombinator.com/item?id=41358020\n",
     "\n",
     "Extras raros:\n",
     "- https://github.com/indigo-dc/udocker\n",
