--- a/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
+++ b/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
@@ -330,8 +330,12 @@
    "metadata": {},
    "source": [
     "# Otras librerias open source interesantes:\n",
+    "- [GitHub Models: alternativa a HuggingFace](https://github.blog/news-insights/product-news/introducing-github-models/)\n",
     "- [Supervision para tareas de computer vision](https://github.com/roboflow/supervision?tab=readme-ov-file)\n",
-    "- [YOLO](https://github.com/ultralytics/ultralytics) [tutorial](https://www.youtube.com/watch?v=hf9MaEazc9s)"
+    "- [YOLO](https://github.com/ultralytics/ultralytics) [tutorial](https://www.youtube.com/watch?v=hf9MaEazc9s)\n",
+    "- [torchchat: Chat with LLMs Everywhere](https://github.com/pytorch/torchchat)\n",
+    "- [Image Generation](https://blackforestlabs.ai/)\n",
+    "- [Stable Fast 3D](https://stability.ai/news/introducing-stable-fast-3d)"
    ]
   },
   {
