--- a/cursos/espanol/deeplearning/nn_architectures/E5_Transformers_Arch.ipynb
+++ b/cursos/espanol/deeplearning/nn_architectures/E5_Transformers_Arch.ipynb
@@ -9,13 +9,20 @@
     "\n",
     "Aqui proporciono enlaces para que los mas curiosos puedan entender en profundidad el funcionamiento de las redes de tipo transformer:\n",
     "\n",
-    "- [Transformer Visualization](https://bbycroft.net/llm)\n",
-    "- [Attention Visualization](https://github.com/jessevig/bertviz)\n",
+    "Crea tu propio ChatGPT desde cero:\n",
+    "\n",
     "- [Self Attention Layer Explanation by Sebastian Raschka](https://magazine.sebastianraschka.com/p/understanding-and-coding-self-attention)\n",
+    "- [Building LLMs from the Ground Up: A 3-hour Coding Workshop by Sebastian Raschka](https://magazine.sebastianraschka.com/p/building-llms-from-the-ground-up)\n",
     "- [Implement a transformer from scratch with pytorch by Andrej Karpathy (OpenAI, Stanford)](https://www.youtube.com/watch?v=kCc8FmEb1nY)\n",
+    "- [GPT in 60 Lines of NumPy by Jay Mody](https://jaykmody.com/blog/gpt-from-scratch/)\n",
     "- [The Illustrated Transformer by Jay Alammar](https://jalammar.github.io/illustrated-transformer/)\n",
     "- [Step by step without math by Miguel Grinberg](https://blog.miguelgrinberg.com/post/how-llms-work-explained-without-math)\n",
     "- [Original Attention Is All You Need paper with code](https://nlp.seas.harvard.edu/2018/04/03/attention.html)\n",
+    "\n",
+    "Visualiza como funciona ChatGPT:\n",
+    "- [Transformer Visualization](https://bbycroft.net/llm)\n",
+    "- [Attention Visualization](https://github.com/jessevig/bertviz)\n",
+    "- [Transformer Explainer: Interactive Learning of Text-Generative Models](https://arxiv.org/abs/2408.04619)\n",
     "\n",
     "\n",
     "------------------------------\n",
