Telegram chat removed

--- a/cursos/espanol/datascience/6_metricas.ipynb
+++ b/cursos/espanol/datascience/6_metricas.ipynb
@@ -665,6 +665,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "59349f02",
+   "metadata": {},
+   "source": [
+    "## Referencias:\n",
+    "\n",
+    "- [Loss Functions and Metrics in Deep Learning](https://arxiv.org/abs/2307.02694)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8cd671f1-bd16-4116-857f-97a30aff25f1",
    "metadata": {},
    "source": [
