--- a/cursos/espanol/datascience/analysis/A1.1_graficos_matplotlib.ipynb
+++ b/cursos/espanol/datascience/analysis/A1.1_graficos_matplotlib.ipynb
@@ -1085,6 +1085,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "515f09a9",
+   "metadata": {},
+   "source": [
+    "## Otras referencias:\n",
+    "\n",
+    "- [Scientific Visualization: Python + Matplotlib] (https://github.com/rougier/scientific-visualization-book)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1c885ae4-7967-4d1d-bb40-990ce07a6a47",
    "metadata": {},
    "source": [
