--- a/cursos/espanol/deeplearning/nn_architectures/E0_redes_neuronales.ipynb
+++ b/cursos/espanol/deeplearning/nn_architectures/E0_redes_neuronales.ipynb
@@ -917,7 +917,7 @@
     "\n",
     "En una red neuronal es mas complejo implementar el algoritmo del gradiente descendiente debido a que hay muchos mas pesos a ajustar y que cada uno influye de manera diferente en el resultado. El truco para lograr que el gradiente descendiente es utilizar la regla de la cadena para ir calculando la influencia de cada peso en la salida.\n",
     "\n",
-    "El proceso es complejo pero el siguiente video de [Daniel Smilkov](https://smilkov.com/) lo muestra muy bien y en detalle. Tambien en la siguiente unidad lo podremos ver paso a paso con la utilizacion de grafos de computacion y autogradiente."
+    "El proceso es complejo pero el siguiente video de [Daniel Smilkov](https://smilkov.com/) lo muestra muy bien y en detalle."
    ]
   },
   {
@@ -929,6 +929,18 @@
     "       controls\n",
     "       src=\"https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/deeplearning/videos/Backpropagation.mp4\">\n",
     "</video>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9eb0b2f",
+   "metadata": {},
+   "source": [
+    "Otros recursos muy buenos para entender el proceso matematico que ocurre dentro de una red neuronal aqui dejos dos recursos muy buenos:\n",
+    "- [Multiplication in Neural Networks](https://datascience.stackexchange.com/questions/75855/what-types-of-matrix-multiplication-are-used-in-machine-learning-when-are-they)\n",
+    "- [The Math behind Neural Networks - Backpropagation](https://www.jasonosajima.com/backprop)\n",
+    "\n",
+    "Tambien en la siguiente unidad lo podremos ver paso a paso con la utilizacion de grafos de computacion y autogradiente."
    ]
   },
   {
