--- a/cursos/espanol/deeplearning/nn_architectures/E5_Transformers_Arch.ipynb
+++ b/cursos/espanol/deeplearning/nn_architectures/E5_Transformers_Arch.ipynb
@@ -37,6 +37,10 @@
     "\n",
     "------------------------------\n",
     "\n",
+    "- [Understanding LSTM Networks](https://colah.github.io/posts/2015-08-Understanding-LSTMs/)\n",
+    "\n",
+    "------------------------------\n",
+    "\n",
     "Tratando de entender que conceptos crea una red tipo transformer\n",
     "\n",
     "- [Mapping the Mind of a Large Language Model by Anthropic](https://www.anthropic.com/news/mapping-mind-language-model)\n",
