--- a/cursos/espanol/reinforcement_learning/0_intro.ipynb
+++ b/cursos/espanol/reinforcement_learning/0_intro.ipynb
@@ -2,6 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "dc6d1e87",
+   "metadata": {},
+   "source": [
+    "# Intro\n",
+    "\n",
+    "\n",
+    "En este caso la entrada sera el mundo, o el medioambiente (enviroment en ingles) y la salida sera una accion de un robot ya sea virtual o fisico al que llamaremos agente (agent en ingles).\n",
+    "\n",
+    "Analicemos como pueden ser cada uno de estos elementos, la entrada, el proceso y la salida:\n",
+    "\n",
+    "## La entrada\n",
+    "\n",
+    "Como dijimos la entrada es el mundo, en el caso mas complejo la entrada seran imagenes, sonidos, olores, datos de sensores tactiles y cualquier otro tipo de sensor que nos imaginemos para obtener la mayor informacion posible del mundo que nos rodea (environment).\n",
+    "\n",
+    "Comenzaremos con ejemplos de mundos muy simples que van a ser tableros de 3x3 de un juego de laberinto donde hay que encontrar la salida. Luego iremos complejizando el mundo incorporante adversarios y objetos que aparecen que no conociamos y que veremos por primera vez mientras jugamos.\n",
+    "\n",
+    "## El algoritmo de aprendizaje\n",
+    "\n",
+    "Pod\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cb0e414c",
    "metadata": {},
    "source": [
@@ -31,6 +54,12 @@
     "- [Leaderboard](https://huggingface.co/spaces/huggingface-projects/Deep-Reinforcement-Learning-Leaderboard)\n",
     "- [AI vs AI](https://huggingface.co/learn/deep-rl-course/unit7/introduction?fw=pt)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4a7fc73",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
