--- a/cursos/espanol/mlops/1_package_managers.ipynb
+++ b/cursos/espanol/mlops/1_package_managers.ipynb
@@ -19,15 +19,24 @@
     "\n",
     "- Si solo vas a programar utilizando Google Colab instala las librerias que necesites todas juntas en una de las primeras celdas. Esto te servira para saber que configuracion necesitas a la hora de llevarlo a produccion.\n",
     "\n",
+    "- Si solo necesitas librerias de PyPi puedes utilizar [uv](https://docs.astral.sh/uv/) y todo sera mas simple y rapido.\n",
+    "```bash\n",
+    "uv init mi-proyecto\n",
+    "cd mi-proyecto\n",
+    "uv add numpy\n",
+    "uv add jupyter lab\n",
+    "uv run jupyter lab\n",
+    "```\n",
+    "\n",
     "- Si vas a programar localmente en jupyter lab y necesitas instalar librerias desde Anaconda y desde PyPi puedes utilizar pixi y sera tan simple como hacer:\n",
     "```bash\n",
     "pixi init mi-proyecto\n",
+    "cd mi-proyecto\n",
     "pixi add numpy\n",
     "pixi add --pypi pandas\n",
+    "pixi add jupyter lab\n",
     "pixi run jupyter lab\n",
     "```\n",
-    "\n",
-    "- Si solo necesitas librerias de PyPi puedes utilizar [uv](https://docs.astral.sh/uv/) y todo sera mas simple y rapido.\n",
     "\n",
     "- Si quieres utilizar solo las herramientas oficiales de Python utiliza `venv` y `pip` como recomienda esta [guia oficial](https://packaging.python.org/en/latest/guides/installing-using-pip-and-virtual-environments/):\n",
     "```bash\n",
@@ -121,15 +130,11 @@
     "[Comandos](https://docs.astral.sh/uv/getting-started/features/):\n",
     "\n",
     "- [`uv init my-project`](): crea un nuevo proyecto, luego ingresamos con `cd my-project`\n",
-    "- [`uv init --script my-project`](): crea un nuevo proyecto ejecutable, luego ingresamos con `cd my-project`\n",
     "- [`uv pin 3.10`](): establece la version de python\n",
-    "- [`uv sync`](): crea el entorno virtual y escribe el lock file\n",
     "- [`uv add \"flask>=2.0\"`](): agrega una libreria y `uv sync` la instala\n",
     "- [`uv remove flask`](): elimina una libreria\n",
-    "- [`uv run my-proyect`](): ejecuta el proyecto dentro del entorno virtual\n",
-    "- [`uv run jupyter lab`](): ejecuta ejecutables dentro del entorno virtual\n",
-    "- [`source ./bin/activate`](): activa el entorno virtual\n",
-    "- [`deactivate`](): desactiva el entorno virtual\n",
+    "- [`uv run jupyter lab`](): ejecuta ejecutables dentro del entorno virtual \n",
+    "- [`uv sync`](): instala las librerias del lock file\n",
     "\n",
     "#### [Pixi](https://prefix.dev/)\n",
     "\n",
