--- a/cursos/espanol/datascience/6_metricas.ipynb
+++ b/cursos/espanol/datascience/6_metricas.ipynb
@@ -196,11 +196,6 @@
     "1. Cuando decimos que la prediccion es positiva y en verdad es negativa: **Falso Positivo**\n",
     "2. Cuando decimos que la prediccion es negativa y en verdad es positiva: **Falso Negativo**\n",
     "\n",
-    "Unas primeras metricas surgen de analizar la proporcion de estos dos tipos de errores:\n",
-    "\n",
-    "- La proporcion de **Falsos Positivos** (FPR = FP / N) se conoce tambien como **Error de Tipo 1**. Podemos pensar en ellos con la pregunta: De los que son realmente negativos cuantos no acerte?\n",
-    "- La proporcion de **Falsos Negativos** (FNR = FN / P) se conoce tambien como **Error de Tipo 2**. Podemos pensar en ellos con la pregunta: De los que son realmente positivos cuantos no acerte?\n",
-    "\n",
     "Veamos un ejemplo:"
    ]
   },
@@ -228,9 +223,8 @@
     "y_prob = [0.24, 0.91, 0.85, 0.55, 0.33, 0.42, 0.51, 0.64, 0.39]\n",
     "# suponiendo que elegimos como unbral 0.5\n",
     "y_predicho = [\"benigno\", \"maligno\", \"maligno\", \"maligno\", \"benigno\", \"benigno\", \"maligno\", \"maligno\", \"benigno\"]\n",
-    "\n",
-    "cm = confusion_matrix(y_verdadero, y_predicho)\n",
-    "disp = ConfusionMatrixDisplay(confusion_matrix=cm,display_labels=[\"benigno\",\"maligno\"])\n",
+    "cm = confusion_matrix(y_verdadero, y_predicho, labels=[\"maligno\",\"benigno\"])\n",
+    "disp = ConfusionMatrixDisplay(confusion_matrix=cm,display_labels=[\"maligno\",\"benigno\"])\n",
     "disp.plot();"
    ]
   },
@@ -239,7 +233,12 @@
    "id": "a7e8b334-5769-4852-8dd1-f43e199ed99c",
    "metadata": {},
    "source": [
-    "A partir de la [matriz de confusion](https://en.wikipedia.org/wiki/Confusion_matrix) surgen las siguientes metricas:\n",
+    "A partir de la [matriz de confusion](https://en.wikipedia.org/wiki/Confusion_matrix) podemos analizar la proporcion de estos dos tipos de errores:\n",
+    "\n",
+    "- La proporcion de **Falsos Positivos** (FPR = FP / N) se conoce tambien como **Error de Tipo 1**. Podemos pensar en ellos con la pregunta: De los que son realmente negativos cuantos no acerte?\n",
+    "- La proporcion de **Falsos Negativos** (FNR = FN / P) se conoce tambien como **Error de Tipo 2**. Podemos pensar en ellos con la pregunta: De los que son realmente positivos cuantos no acerte?\n",
+    "\n",
+    "Otras metricas que surgen de la matriz de confusion son:\n",
     "\n",
     "- **Precision**: Verdaderos Positivos / (Total Predichos Positivos) proporcion de datos predichos correctamente sobre el total de predichos de la clase positiva. \n",
     "- **Recall**: Verdaderos Positivos / (Total Positivos) proporcion de datos predichos correctamente sobre el total de verdaderos de la clase positiva. \n",
